fdo#60789: writerfilter: continue the import if comment insertion fails

Catch exceptions in DomainMapper_Impl::PopFieldContext().

Change-Id: Ia60857a5f773c9d89217991d481a5f20d0de3151